--- a/Challenge2/Flask/templates/report.html
+++ b/Challenge2/Flask/templates/report.html
@@ -6,7 +6,7 @@
 
   <body>
      <h1>Search Results</h1>
-     <h3>You are looking for {{searchingBy}}</h3>
+     <h3>Found {{resultsNumber}} results for: {{searchingBy}}</h3>
      {{ potato }}
   </body>
 </html>
